Bug 230149 - kteatime seems to ignore the command line time with argument -t
Summary: kteatime seems to ignore the command line time with argument -t
Status: RESOLVED FIXED
Alias: None
Product: kteatime
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Stefan Böhmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-10 00:11 UTC by angus
Modified: 2010-05-01 18:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description angus 2010-03-10 00:11:29 UTC
Version:           unspecified (using Devel) 
OS:                Linux

I had a couple of scripts that would set the time for kteatimer using the -t argument.   No matter what value this is set to it always sets the time to 3 minutes.   The -n argument still works.   

Reproducible: Always

Steps to Reproduce:
kteatime --time 1500 --name "pomodoro"
teatime -t 15 -n "pomodoro"
Actual Results:  
kteatime opens with name of tea set to pomodoro but time set to 3 minutes

Expected Results:  
kteatime should open with a tea name set to "pomodoro" and the counter set to 25 minutes

I had stopped using this technique for some time (3 months) and have all my machines on KDE 4.4.1 so can't advise as to which version this started occuring.
Comment 1 Stefan Böhmann 2010-04-15 00:09:18 UTC
While trying to reproduce this bug i found another one (-n works, but --name doesn't) but I couldn't reproduce this one.

Can you still reproduce this bug?
Comment 2 angus 2010-04-15 00:46:26 UTC
Yes.
eg.
kteatime -t 6000 -n blah
OR
kteatime -t 10 -n sdf

kteatime starts but always counting down from 3 minutes

On 15/04/10 08:09, Stefan Böhmann  wrote:
> https://bugs.kde.org/show_bug.cgi?id=230149
>
>
> Stefan Böhmann <kde@hilefoks.org> changed:
>
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>              Status|UNCONFIRMED                 |NEW
>                  CC|                            |kde@hilefoks.org
>      Ever Confirmed|0                           |1
>
>
>
>
> --- Comment #1 from Stefan Böhmann <kde hilefoks org>  2010-04-15 00:09:18 ---
> While trying to reproduce this bug i found another one (-n works, but --name
> doesn't) but I couldn't reproduce this one.
>
> Can you still reproduce this bug?
>
>
Comment 3 Stefan Böhmann 2010-05-01 18:44:33 UTC
SVN commit 1121549 by sboehmann:

Backport r1121528
Fix: `--time' command line option works properly now

BUG: 230149


 M  +1 -1      main.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1121549