Backport r1121528 Fix: `--time' command line option works properly now

BUG: 230149

svn path=/branches/KDE/4.4/kdetoys/kteatime/; revision=1121549